--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -4,11 +4,15 @@ html {
     height: 100%;
     font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica',
       'Arial', sans-serif;
-    margin: 0 auto;
+    margin: 0;
+    padding: 0;
     background: #edf2f7;
+    overflow: hidden;
 }
 
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
